tests/NormalTests/paczka2/big_fuzzy/53258827.err
Error in line 1: D5T16Ep9 A53 79,0
Error in line 4: u6U8 A53 75,9
Error in line 11: X5OZ2 S777 52,0
Error in line 9: uAgtEZ8l S404 51,2
Error in line 25: uAgtEZ8l S777 54,6
Error in line 29: knAKH4tmirk S207 75,2
Error in line 32: knAKH4tmirk S777 29,5
Error in line 48: uAgtEZ8l S404 14,1
Error in line 46: gPZ S777 96,5
Error in line 61: D5T16Ep9 S777 37,1
Error in line 62: D5T16Ep9 S207 75,9
Error in line 73: D5T16Ep9 A53 96,7
Error in line 90: S777 A53 2,6
Error in line 94: knAKH4tmirk S777 102,4
Error in line 100: knAKH4tmirk S404 44,6
Error in line 80: X5OZ2 S404 48,2
Error in line 104: X5OZ2 S207 11,8
Error in line 108: D5T16Ep9 A53 17,4
Error in line 93: gPZ S777 47,6
Error in line 125: gPZ S404 52,6
Error in line 146: gPZ S207 49,8
Error in line 147: D5T16Ep9 S404 46,3
Error in line 148: gPZ S404 19,3
Error in line 152: gPZ A53 60,2
Error in line 177: u6U8 S777 63,4
Error in line 178: u6U8 A53 32,8
Error in line 182: uAgtEZ8l S207 74,2
Error in line 185: u6U8 S207 -3,8
Error in line 188: knAKH4tmirk A53 98,9
Error in line 180: u6U8 S207 73,9
Error in line 193: u6U8 S404 38,1
Error in line 190: knAKH4tmirk S777 79,1
Error in line 181: S777 A53 22,9
Error in line 199: S777 S777 94,9
Error in line 195: uAgtEZ8l S404 21,9
Error in line 230: gPZ S207 82,2
Error in line 224: X5OZ2 S207 42,3
Error in line 239: X5OZ2 A53 7,2
